--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,29 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "BUILD_RUN_WEB",
+            "label": "Build Debug",
+            "type":"process",
+            "command":"cmake",
+            "args": [
+                "--build",
+                "desktop_build"
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "Build & Run Web",
             "type": "shell",
             "command": "buildrunweb.bat",
             "presentation": {
@@ -20,7 +42,7 @@
             "problemMatcher": []
         },
         {
-            "label": "BUILD_WEB",
+            "label": "Build Web",
             "type": "shell",
             "command": "buildweb.bat",
             "presentation": {
@@ -37,7 +59,7 @@
             }
         },
         {
-            "label": "RUN_WEB",
+            "label": "Run Web",
             "type": "shell",
             "command": "runweb.bat",
             "presentation": {
